youtube videos uploaded and linked

--- a/pp/templates/pp/projects.html
+++ b/pp/templates/pp/projects.html
@@ -10,10 +10,11 @@
         <div class="project-visual">
           <div class="videowrapper">
 
-            <iframe  
-            src="https://www.youtube.com/embed/FrRM20wTvcQ?autoplay=1&mute=1&disablekb=1&loop=1&controls=0&start=0" 
+            <iframe 
+            src="https://www.youtube.com/embed/2BCJkYIpUbI?autoplay=1&mute=1&disablekb=1&loop=1&controls=0&start=0" 
+            title="Yelp Web Crawler Using Python and Beautiful Soup 4 | By UpperCase Guy" 
             frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
             </iframe>
 
           </div>
@@ -39,7 +40,7 @@
             <li>Beautiful soup 4</li>
           </ul>
           <div class="proj-links">
-            <a href=""><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
+            <a href="https://www.youtube.com/watch?v=2BCJkYIpUbI" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
             <a href="https://github.com/theuppercaseguy/Yelp-Webcrawler" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
                 
             
@@ -51,13 +52,13 @@
         <div class="project-visual">
           <div class="videowrapper">
 
-            <iframe  
-            src="https://www.youtube.com/embed/FrRM20wTvcQ" 
-            title="FLYING OVER GREECE (4K UHD) Amazing Beautiful Nature Scenery with Relaxing Music | 4K VIDEO ULTRA HD" 
+            <iframe 
+            src="https://www.youtube.com/embed/ZeRvaW1d4QI?autoplay=1&mute=1&disablekb=1&loop=1&controls=0&start=0" 
+            title="Mercy: Protect Thy Honour | Street Fighter Type Game | By Upper Case Guy" 
             frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            ></iframe>
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
 
+            </iframe>
           </div>
 
         </div>
@@ -84,7 +85,7 @@
             <li>SDL_TTF</li>
           </ul>
           <div class="proj-links">
-            <a href=""><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
+            <a href="https://youtu.be/ZeRvaW1d4QI" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
             <a href="https://github.com/theuppercaseguy/Street-Fighters" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
           </div>
         </div>
@@ -93,14 +94,14 @@
       <li class="list reveal">
         <div class="project-visual">
           <div class="videowrapper">
-
-            <iframe  
-            src="https://www.youtube.com/embed/FrRM20wTvcQ" 
-            title="FLYING OVER GREECE (4K UHD) Amazing Beautiful Nature Scenery with Relaxing Music | 4K VIDEO ULTRA HD" 
+            <iframe
+            src="https://www.youtube.com/embed/wciPGjFHWxY?autoplay=1&mute=1&disablekb=1&loop=1&controls=0&start=0" 
+            title="Find Yoursel A Mentor, Semester Project Website | By UpperCase Guy" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            ></iframe>
-
+            >
+  
+            </iframe>
           </div>
 
         </div>
@@ -108,7 +109,7 @@
         <div class="project-content">
           <p class="proj-overline">Standalone Project</p>
           <h3 class="proj-title">
-            <a href="https://github.com/theuppercaseguy/Find-Yourself-A-Mentor" target="_blank" class="hover-underline-animation">Find-Yourself-A-Mentor</a>
+            <a href="https://findmentors.herokuapp.com/" target="_blank" class="hover-underline-animation">Find-Yourself-A-Mentor</a>
           </h3>
           <div class="proj-desc">
             <p>
@@ -126,7 +127,7 @@
             <li>JS</li>
           </ul>
           <div class="proj-links">
-            <a href=""><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
+            <a href="https://youtu.be/wciPGjFHWxY" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
             <a href="https://github.com/theuppercaseguy/Find-Yourself-A-Mentor" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
                 
             
@@ -138,3 +139,7 @@
     </ul>
   </div>
 </div>
+
+
+
+
