--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -171,6 +171,15 @@ canvas {
   display: block; 
   vertical-align: bottom;
 }
+
+.background{
+    z-index: -3;
+    width: 100%;
+    height: 1005;
+    background-color: #505b66;
+    position: fixed;
+}
+
 .border-line{
     /* border: 1px solid black; */
 }
@@ -724,10 +733,6 @@ a{
 }
 
 /* ##############################footer css ########################### */
-.test{
-    width: 100vw;
-    border: 2px solid red;
-}
 
 .footer-distributed{
     background: #596470;
@@ -739,8 +744,8 @@ a{
     
     padding-bottom: 10px;
     padding-top: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
+    padding-right: 90px;
+    padding-left: 90px;
 
     /* margin-left: 80px; */
     z-index: -1;
@@ -922,6 +927,7 @@ a{
 	}
 
 }
+
 .wrapper{
     display: flex;
     flex-direction: row-reverse;
@@ -1272,6 +1278,7 @@ label{
 @media (max-width:500px){
     .footer-distributed{
         background-color:unset;
+        padding: 0 0px 0px 10%;
     }
 }
 
