performance improvement, removed comments

--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -16,11 +16,11 @@
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.7.1.min.js"
     ></script>
-    <script async defer src="{% static 'pp/js/nav-bar.js' %}"></script>
+    <script  defer src="{% static 'pp/js/nav-bar.js' %}"></script>
     <script defer src="{% static 'pp/js/particles.js' %}"></script>
     <script defer src="{% static 'pp/js/app.js' %}"></script>
-    <script async src="{% static 'pp/js/index.js' %}"></script>
-    <script async defer src="{% static 'pp/js/all.js' %}"></script>
+    <script  src="{% static 'pp/js/index.js' %}"></script>
+    <script  defer src="{% static 'pp/js/all.js' %}"></script>
   </head>
 
   <body>
