increased review limit and speelings

--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="user-box">
                     <input type="text" name="review" maxlength="800" required="true">
-                    <label>Review</label>
+                    <label>Review (800 char)</label>
                 </div>
                 
 
