--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -229,19 +229,19 @@
               <p>
                 Hi, My name is <span>Saad Khan</span>, aka
                 <span>The Upper Case Guy</span>. I like creating things, whether
-                they be Games, WebSites, SoftWares or anything that gives a
+                they be Games, WebSites, Software or anything that gives a
                 challenge.
               </p>
               <p>
                 My journey as a developer started way back, in my teens. Growing
-                up I always had a nack for creating problems, and then
-                ultimately solving them. Thats how I got into coding.
+                up I always had a knack for creating problems, and then
+                ultimately solving them. That's how I got into coding..
               </p>
               <p>
                 Today I'm pursuing a Computer Engineering degree at
                 <a href="https://giki.edu.pk/" target="_blank" class="hover-underline-animation">GIK</a>, a mix of
                 Two of my favourite fields. Part off and even Leading Multiple
-                teams and socities at my College. Having done internships at
+                teams and societies at my College. Having done internships at
                 multiple start-ups and Multi-National Tech Companies.
               </p>
               <p>Internships and start-ups where i worked at:</p>
@@ -254,7 +254,7 @@
                   <a href="http://stit.kp.gov.pk/kpitb/contact" target="_blank" class="hover-underline-animation">IT Park</a>
                 </li>
               </ul>
-              <p>Some of the few Tech's and Concepts im good at:</p>
+              <p>Some of the few Tech's and Concepts I'm good at:</p>
               <ul>
                 <li>Django</li>
                 <li>Laravel</li>
