--- a/pp/templates/pp/projects.html
+++ b/pp/templates/pp/projects.html
@@ -29,8 +29,8 @@
 
           <div class="proj-desc">
             <p>
-              A Yelp Web Crawler/Scrapper use to find information about any busines in any location. And also able to store it an an excell file.
-              Extract Title, phone no, location and website of any buisness that can be exported in an Excell file.
+              A Yelp Web Crawler/Scrapper use to find information about any business in any location. And also able to store it in an excel file.
+              Extract the Title, phone no, location and website of any business that can be exported in an Excell file.
             </p>
           </div>
           <ul class="tech-list">
@@ -70,10 +70,10 @@
           </h3>
           <div class="proj-desc">
             <p>
-              A 2d 2-player Street Fighter Type game that i created as my second semester project.
-              This program is written in only C++, using the concepts of OBJECT ORIENTED PROGRAMING(OOP) and SDL libraries to render graphics.
-              4 different players to choose from and each with their unique fighting style.
-              Fully functional controlls and graphics, hope you enjoy the gameplay.
+              A 2d 2-player Street Fighter Type game that I created as my second-semester project.
+              This program is written in only C++, using the concepts of OBJECT ORIENTED PROGRAMMING(OOP) and SDL libraries to render graphics.
+              4 different players to choose from and each with a unique fighting style.
+              Fully functional controls and graphics, hope you enjoy the gameplay.
             </p>
           </div>
           <ul class="tech-list">
@@ -113,8 +113,8 @@
           </h3>
           <div class="proj-desc">
             <p>
-              A website I created as a College, end semeseter project using django web frame work.
-              The website basically finds mentor for newly admited students in our college, so that they can have an easy startup.
+              A website I created as a College, end-semester project using the Django web framework.
+              The website finds mentors for newly admitted students in our college so that they can have an easy startup.
               This project focused mainly on relational databases.
             </p>
           </div>
