--- a/pp/templates/pp/projects.html
+++ b/pp/templates/pp/projects.html
@@ -52,12 +52,20 @@
         <div class="project-visual">
           <div class="videowrapper">
 
-            <iframe 
+            <iframe
               src="https://www.youtube.com/embed/ZeRvaW1d4QI?autoplay=1&mute=1&disablekb=1&loop=1&controls=0&start=0" 
               title="Mercy: Protect Thy Honour | Street Fighter Type Game | By Upper Case Guy" 
               frameborder="0" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+
             </iframe>
+
+            <!-- <iframe 
+              src="https://www.youtube.com/embed/ZeRvaW1d4QI?autoplay=1&mute=1&disablekb=1&loop=1&controls=0&start=0" 
+              title="Mercy: Protect Thy Honour | Street Fighter Type Game | By Upper Case Guy" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+            </iframe> -->
 
             </div>
 
