--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -266,7 +266,7 @@
                 <li>OOPs</li>
                 <li>Data Structures</li>
                 <li>Data Bases</li>
-                <li>Memory Management(Pointers)</li>
+                <li>Memory <br> Management(Pointers)</li>
               </ul>
             </div>
             <div class="inner-right border-line left-slide-reveal reveal">
