--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -11,7 +11,7 @@
                 
                 {% for i,name,id,priority,title,review,turnonn in data %}
 
-                <div class="swiper-slide">
+                <div class="swiper-slide overy-auto">
                     <div class="testimonialsBox">
                         <img src="{% static 'pp/images/quotes.png' %}" alt="err-quote" class="quote">
 
@@ -33,6 +33,7 @@
                     </div>
 
                 </div>
+                
 
                 {% endfor %}
             </div>
