--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -237,22 +237,27 @@
           <div class="about-inner reveal">
             <div class="inner-left border-line reveal">
               <p>
-                Hi, My name is <span>Saad Khan</span>, aka
-                <span>The Upper Case Guy</span>. I like creating things, whether
-                they be Games, WebSites, Software or anything that gives a
-                challenge.
+                Hello and welcome! My name is <span>Saad Khan</span>, also known as
+                <span>The Upper Case Guy</span>. As a passionate creator, I enjoy developing a wide 
+                range of projects such as games, websites, Hardware Projects and softwares.
+                 I thrive on challenges and love to solve complex problems.
               </p>
               <p>
-                My journey as a developer started way back, in my teens. Growing
-                up I always had a knack for creating problems, and then
-                ultimately solving them. That's how I got into coding..
+                My journey as a developer started in my teenage years when I first discovered my passion for
+                 creating and solving problems. From that moment on, I knew that coding was my calling.
               </p>
               <p>
-                Today I'm pursuing a Computer Engineering degree at
-                <a href="https://giki.edu.pk/" target="_blank" class="hover-underline-animation">GIK</a>, a mix of
-                Two of my favourite fields. Part off and even Leading Multiple
-                teams and societies at my College. Having done internships at
-                multiple start-ups and Multi-National Tech Companies.
+                Currently, I am pursuing a degree in Computer Engineering at
+                <a href="https://giki.edu.pk/" target="_blank" class="hover-underline-animation">GIK</a>,
+                where I am able to combine my passion for coding with my love for technology. As a leader of multiple teams and societies
+                 at my college, I enjoy the opportunity to share my knowledge and inspire others.
+                  Additionally, I have completed internships at multiple start-ups and multi-national tech companies,
+                   which has further enhanced my skills and knowledge in the field.
+              </p>
+              <p>
+                Thank you for taking the time to learn more about me and my journey as a developer.
+                 I am always looking for new challenges and opportunities to grow, so please feel
+                  free to reach out if you would like to connect or collaborate.
               </p>
               <p>Internships and start-ups where i worked at:</p>
               <ul>
