--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -76,8 +76,9 @@
                     <label>Full Name</label>
                 </div>
                 <div class="user-box">
+                    
                     <input type="text" name="ldp" maxlength="50" required="false">
-                    <label>Linked In(None=NULL)</label>
+                    <label>Linked In(Optional)</label>
                 </div>
                 <div class="user-box">
                     <input type="text" name="title" maxlength="20" required="true">
